# dm-availability-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: bot.py  config.py  dm_api.py  main.py  storage.py
tests/: conftest.py  test_bot.py  test_dm_api.py  test_handlers.py  test_storage.py
