[project]
name = "dm-availability-bot"
version = "0.1.0"
description = "Telegram bot that watches product availability at your local dm-drogerie markt store"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-telegram-bot[job-queue]>=22,<23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = ["ruff", "pytest", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
